# goal-tracker-backend

./: .env  .gitignore  .pre-commit-config.yaml  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  alembic.ini  clear_test_data.py  create_demo_data.py  create_tables.py  deploy.sh  docker-compose.yml  env.example  fix_enum_migration.py  fix_enum_schema.sql  pyproject.toml  requirements.txt  run.py  setup-local.sh  test_connection.py
app/: main.py
app/api/v1/: router.py
app/api/v1/endpoints/: auth.py  goals.py  health.py  logs.py  stats.py
app/core/: config.py  database.py  logging.py  security.py
app/models/: __init__.py
app/repositories/: __init__.py
app/schemas/: __init__.py
app/services/: __init__.py
app/utils/: seed.py
docker/mysql/: init.sql
migrations/: env.py
migrations/versions/: 0001_initial.py  0002_convert_enums_to_strings.py  0003_add_share_token_to_goals.py
tests/: conftest.py  test_auth.py  test_goals.py  test_health.py
